# swagger/swagger.yml
@@ -120,6 +120,44 @@ paths:
           description: '{string} Mensaje eliminado'
         "404":
           description: not found resource
+  /colas/mensajes/espera:
+    get:
+      tags:
+      - colas
+      description: Espera por un tiempo determinado a que los mensajes estén disponibles
+        y devuelve los recibidos en ese intervalo de tiempo
+      operationId: ColasController.EsperarMensajes
+      parameters:
+      - in: query
+        name: nombre
+        description: Nombre de la cola
+        required: true
+        type: string
+      - in: query
+        name: tiempoEspera
+        description: Tiempo de espera del api por mensajes
+        required: true
+        type: integer
+        format: int64
+      - in: query
+        name: cantidad
+        description: Cantidad máxima de mensajes a recibir. Por defecto, se recibirán
+          todos
+        type: integer
+        format: int64
+      - in: query
+        name: filtro
+        description: Recepción de mensajes filtrados por metadata. Tiene el funcionamiento
+          de un and, por lo tanto sólo devuelve los valores que cumplan con todo el
+          filtro
+        type: string
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Mensaje'
+        "400":
+          description: Error en parametros ingresados
   /notificaciones/enviar/:
     post:
       tags:
@@ -235,13 +273,13 @@ definitions:
   1083.<nil>.string:
     title: string
     type: object
-  1159.0xc0005ba3c0.false:
+  1159.0xc0006d9f50.false:
     title: "false"
     type: object
-  1849.0xc0005ba570.false:
+  1849.0xc0006ec120.false:
     title: "false"
     type: object
-  2469.0xc0005ba780.false:
+  2469.0xc0006ec330.false:
     title: "false"
     type: object
   map[string]interface{Success:
@@ -309,7 +347,7 @@ definitions:
         additionalProperties:
           type: string
       Body:
-        $ref: '#/definitions/1159.0xc0005ba3c0.false'
+        $ref: '#/definitions/1159.0xc0006d9f50.false'
       ReceiptHandle:
         type: string
   models.Notificacion:
@@ -321,7 +359,7 @@ definitions:
       Asunto:
         type: string
       Atributos:
-        $ref: '#/definitions/1849.0xc0005ba570.false'
+        $ref: '#/definitions/1849.0xc0006ec120.false'
       DestinatarioId:
         type: array
         items:
@@ -343,7 +381,7 @@ definitions:
       Statement:
         type: array
         items:
-          $ref: '#/definitions/2469.0xc0005ba780.false'
+          $ref: '#/definitions/2469.0xc0006ec330.false'
       Version:
         type: string
   models.Suscripcion:
